--- a/To_Do_List/app/src/main/res/layout/activity_to_do.xml
+++ b/To_Do_List/app/src/main/res/layout/activity_to_do.xml
@@ -21,6 +21,8 @@
 
     <ListView
         android:id="@+id/todo_list"
+        android:divider="@null"
+        android:dividerHeight="0dp"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
